fix on html and css files

--- a/index.html
+++ b/index.html
@@ -24,16 +24,12 @@
         <div class="aesthetic">
           <img
             class="outoftime"
-            src="../TRIBUTE PAGE/img/outoftime.jpg"
+            src="./img/outoftime.jpg"
             alt="Out of Time Picture"
           />
           <p class="songTitle">Out of Time</p>
           <p class="artist">The Weeknd</p>
-          <img
-            class="mplayer"
-            src="../TRIBUTE PAGE/img/player.png"
-            alt="Music Player"
-          />
+          <img class="mplayer" src="./img/player.png" alt="Music Player" />
           <p class="bio">
             <strong>Abel Makkonen Tesfaye</strong>, known professionaly as
             <strong>The Weeknd</strong>, is a Canadian singer-songwriter and
@@ -57,7 +53,7 @@
         <figure id="img-div">
           <img
             id="image"
-            src="../TRIBUTE PAGE/img/erabyera.jpg"
+            src="./img/erabyera.jpg"
             alt="The Weeknd Era by Era"
           />
           <figcaption id="img-caption">The Weeknd Era by Era</figcaption>
@@ -136,72 +132,52 @@
       <section id="discography" role="region" aria-labelledby="discography">
         <img
           class="albumcov"
-          src="../TRIBUTE PAGE/img/houseofballoons.png"
+          src="./img/houseofballoons.png"
           alt="house-of-balloons-picture"
         />
         <p class="albuminfo">House Of Balloons (2011)</p>
         <div class="spacer"></div>
-        <img
-          class="albumcov"
-          src="../TRIBUTE PAGE/img/thursday.png"
-          alt="thursday-picture"
-        />
+        <img class="albumcov" src="./img/thursday.png" alt="thursday-picture" />
         <p class="albuminfo">Thursday (2011)</p>
         <div class="spacer"></div>
         <img
           class="albumcov"
-          src="../TRIBUTE PAGE/img/echoes.png"
+          src="./img/echoes.png"
           alt="echoes-of-silence-picture"
         />
         <p class="albuminfo">Echoes Of Silence (2011)</p>
         <div class="spacer"></div>
-        <img
-          class="albumcov"
-          src="../TRIBUTE PAGE/img/trilogy.png"
-          alt="trilogy-picture"
-        />
+        <img class="albumcov" src="./img/trilogy.png" alt="trilogy-picture" />
         <p class="albuminfo">Trilogy (2012)</p>
         <div class="spacer"></div>
         <img
           class="albumcov"
-          src="../TRIBUTE PAGE/img/kissland.png"
+          src="./img/kissland.png"
           alt="kiss-land-picture"
         />
         <p class="albuminfo">Kiss Land (2013)</p>
         <div class="spacer"></div>
         <img
           class="albumcov"
-          src="../TRIBUTE PAGE/img/beauty.png"
+          src="./img/beauty.png"
           alt="beauty-behind-the-madness"
         />
         <p class="albuminfo">Beauty Behind the Madness (2015)</p>
         <div class="spacer"></div>
-        <img
-          class="albumcov"
-          src="../TRIBUTE PAGE/img/starboy.png"
-          alt="starboy-picture"
-        />
+        <img class="albumcov" src="./img/starboy.png" alt="starboy-picture" />
         <p class="albuminfo">Starboy (2016)</p>
         <div class="spacer"></div>
-        <img
-          class="albumcov"
-          src="../TRIBUTE PAGE/img/mydear.jpg"
-          alt="my-dear-melancholy"
-        />
+        <img class="albumcov" src="./img/mydear.jpg" alt="my-dear-melancholy" />
         <p class="albuminfo">My Dear Melancholy (2018)</p>
         <div class="spacer"></div>
         <img
           class="albumcov"
-          src="../TRIBUTE PAGE/img/afterhours.png"
+          src="./img/afterhours.png"
           alt="after-hours-picture"
         />
         <p class="albuminfo">After Hours (2020)</p>
         <div class="spacer"></div>
-        <img
-          class="albumcov"
-          src="../TRIBUTE PAGE/img/dawnfm.jpg"
-          alt="dawn-fm-picture"
-        />
+        <img class="albumcov" src="./img/dawnfm.jpg" alt="dawn-fm-picture" />
         <p class="albuminfo">Dawn FM (2022)</p>
       </section>
       <div class="spacer"></div>
@@ -210,7 +186,7 @@
         <p class="website">
           You can visit
           <a
-            id="tribute-link"
+            class="tribute-link"
             href="https://www.theweeknd.com/"
             target="_blank"
           >
@@ -221,7 +197,7 @@
         <p class="website">
           You can also check his
           <a
-            id="tribute-link"
+            class="tribute-link"
             href="https://en.wikipedia.org/wiki/The_Weeknd"
             target="_blank"
           >
