--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
             Wikipedia Entry</a
           >.
         </p>
+        <p class="website">© 2022. Kerby Cantos.</p>
       </section>
     </main>
   </body>
